feature: add preview whit image
