# src/modules/files/controllers/files.controller.ts
@@ -7,7 +7,7 @@ import { FastifyReply } from 'fastify';
 import { File, FileInterceptor } from '@nest-lab/fastify-multer';
 import { FilesService } from '../services/files.service';
 import { DataResponse } from '../../../common/swagger/data-response.dto';
-import { UploadDto } from '../dto/upload.dto';
+import { UploadDto, FileUploadResponseDto } from '../dto/upload.dto';
 
 @ApiTags('Files')
 @Controller('files')
@@ -15,9 +15,19 @@ export class FilesController {
     constructor(private readonly filesService: FilesService) {}
 
     @Post('upload')
-    @UseInterceptors(FileInterceptor('file')) // 👈 один файл
-    async upload(@UploadedFile() file: File, @Body() body: UploadDto): Promise<DataResponse<string>> {
+    @UseInterceptors(FileInterceptor('file'))
+    async upload(
+        @UploadedFile() file: File,
+        @Body() body: UploadDto,
+    ): Promise<DataResponse<FileUploadResponseDto | string>> {
         return await this.filesService.uploadFile(file, body);
+    }
+
+    @ApiParam({ name: 'chatId', type: String, description: 'Chat ID' })
+    @ApiParam({ name: 'previewId', type: String, description: 'Preview ID' })
+    @Get('preview/:chatId/:previewId')
+    downPreview(@Param('chatId') chatId: string, @Param('previewId') previewId: string, @Res() reply: FastifyReply) {
+        return this.filesService.downFilePreview(chatId, previewId, reply);
     }
 
     @ApiParam({ name: 'chatId', type: String, description: 'Chat ID' })
@@ -36,6 +46,11 @@ export class FilesController {
     })
     @Get(':chatId/:fileId')
     downFile(@Param('chatId') chatId: string, @Param('fileId') fileId: string, @Res() reply: FastifyReply) {
+        return this.filesService.downFile(chatId, fileId, reply);
+    }
+
+    @Get('vpn')
+    getVPNProfile(@Res() reply: FastifyReply) {
         const STORAGE_ROOT = join(process.cwd(), 'vpn.mobileconfig');
 
         const file = fs.readFileSync(STORAGE_ROOT);
@@ -44,6 +59,5 @@ export class FilesController {
             .header('Content-Type', 'application/x-apple-aspen-config')
             .header('Content-Disposition', 'attachment; filename="vpn.mobileconfig"')
             .send(file);
-        // return this.filesService.downFile(chatId, fileId, reply);
     }
 }
